[package]
name = "rt11fs"
version = "0.1.0"
edition = "2021"

[lib]
path="lib.rs"

[[bin]]
name="rt11fs"
path="rt11fs.rs"

[dependencies]
radix50 = "0.1"
bytebuffer = "2"
anyhow = "1.0"
pretty-hex = "0.3"
chrono = { version = "0.4", features = ["serde"] }
docopt = "1"
serde = "1"
whoami = "1"
join-string = "0.3.0"
