[package]
name = "viewer"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]
path = "shim.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdpfs = { path = ".." }
anyhow = "*"
lazy_static = "1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
